--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,4 +1,56 @@
-.sidebar {}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+body {
+    font-family: "Roboto", sans-serif;
+}
+
+html {
+    font-size: 62.5%;
+    /* 10px */
+}
+
+header {
+    background-color: #0A0A0A;
+    padding: 1rem 1.8rem;
+    box-shadow: 0 0.2rem 0.5rem 0 #4f4f4f;
+}
+
+.nav-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bts-container {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    gap: 2.2rem;
+}
+
+.header-bts {
+    color: #FAFAFA;
+    background-color: #0A0A0A;
+    border: 1px;
+    border-radius: 1rem;
+    font-size: 1.8rem;
+    padding: 1rem;
+}
+
+.header-bts:hover {
+    background-color: #424242;
+}
+
+.active {
+    background-color: #FAFAFA;
+    color: #171717;
+}
 
 /* Estilo do botão hambúrguer */
 .menu-hamburguer {
@@ -17,7 +69,7 @@
     display: block;
     width: 30px;
     height: 3px;
-    background-color: #333;
+    background-color: #FAFAFA;
     margin: 6px 0;
     transition: transform 0.3s ease-in-out;
 }
